--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1> Language Detector</h1>
-    <p class="info"> Under option 1 name and option 2 name, enter the names of two languages, and in their respective samples, put samples of each language! This is made for English and Spanish but can theoretically be applied to any pair of languages that use the latin alphabet, and can occasionally detect differences between two categories of text in the same language.</p>
+    <p class="info"> Under option 1 name and option 2 name, enter the names of two languages, and in their respective samples, put samples of each language! This is made for English and Spanish but can theoretically be applied to any pair of languages that use the latin alphabet, and can occasionally detect differences between two categories of text in the same language. A confidence score of 0.5 is pretty confident, a score of 1 is very confident. Doesn't work with short text samples.</p>
     <textarea class="inputField" id="inputField"></textarea><br>
     <button onclick="test()">test</button>
     <p id="outputtest" class="output"> </p>
